@@ -117,6 +117,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '8.29'
@@ -342,6 +348,8 @@ dependencies {
   testCompile group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.26.3'
   testImplementation group: 'ru.lanwen.wiremock', name: 'wiremock-junit5', version: '1.3.1'
   testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   //PACT testing
   contractTestCompile group: 'com.google.guava', name: 'guava', version: '30.0-jre'
